octobot/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: octobot
  namespace: octobot
  labels:
    io.kompose.service: octobot
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: octobot
  template:
    metadata:
      labels:
        io.kompose.service: octobot
    spec:
      volumes:
        - name: octobot-claim0
          persistentVolumeClaim:
            claimName: octobot-claim0
        - name: octobot-claim1
          persistentVolumeClaim:
            claimName: octobot-claim1
        - name: octobot-claim2
          persistentVolumeClaim:
            claimName: octobot-claim2
        - name: octobot-claim3
          persistentVolumeClaim:
            claimName: octobot-claim3
      containers:
        - name: octobot
          image: drakkarsoftware/octobot:2.0.8
          ports:
            - containerPort: 5001
              protocol: TCP
          resources: {}
          volumeMounts:
            - name: octobot-claim0
              mountPath: /octobot/logs
            - name: octobot-claim1
              mountPath: /octobot/backtesting
            - name: octobot-claim2
              mountPath: /octobot/tentacles
            - name: octobot-claim3
              mountPath: /octobot/user
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: Recreate
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
