octobot/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: octobot
  namespace: octobot
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 5001
  selector:
    app.kubernetes.io/name: octobot
  type: ClusterIP
  sessionAffinity: None
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  internalTrafficPolicy: Cluster
