octobot/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: octobot
  namespace: octobot
spec:
  defaultBackend:
    service:
      name: octobot
      port:
        name: http
  ingressClassName: tailscale
  tls:
    - hosts:
        - octobot
